--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "bootstrap": "4.6.0",
-    "devicon": "2.2.0",
+    "config": "3.3.3",
     "express": "4.17.1",
+    "graphql": "^15.5.0",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
