--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon -w server.js server.js",
+    "next-dev": "next dev",
     "build": "next build",
     "start": "cross-env NODE_ENV=production node server.js"
   },
@@ -16,5 +17,8 @@
     "react-typed": "1.2.0",
     "reactstrap": "8.9.0",
     "sass": "1.32.7"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.7"
   }
 }
