--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "4.6.0",
+    "devicon": "2.2.0",
     "express": "4.17.1",
     "next": "10.0.6",
     "react": "17.0.1",
