--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-typed": "1.2.0",
+    "react-vertical-timeline-component": "3.3.3",
     "reactstrap": "8.9.0",
     "sass": "1.32.7"
   },
